--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,17 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "pdf-to-text": "^0.0.7",
+    "pdfjs": "^2.5.3",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wavesurfer.js": "^7.7.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",  
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
